@@ -1469,6 +1469,27 @@
   </build>
   <profiles>
     <profile>
+      <id>java15</id>
+      <activation>
+        <jdk>15</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--illegal-access=warn --add-exports	java.base/sun.nio.ch=ALL-UNNAMED 
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED 
+        			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist 
+        			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
+					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist 
+					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/jdk-15/bin/java</test.jvm.path>
+        <jdk.src.version>11</jdk.src.version>
+        <jdk.target.version>11</jdk.target.version>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.5</jacoco.version>
+        <compiler.plugin.version>3.8.1</compiler.plugin.version>
+        <surefire.version>3.0.0-M4</surefire.version>
+      </properties>
+    </profile>
+    <profile>
       <id>java14</id>
       <activation>
         <jdk>14</jdk>
